# cmake_sample

./: CMakeLists.txt  README.md
hello/: CMakeLists.txt
hello/cpp/: hello.cpp
hello2/: CMakeLists.txt
hello2/cpp/: hello2.cpp
sayhello/: CMakeLists.txt
sayhello/cpp/: sayhello.cpp
sayhello/headers/: sayhello.h
